# 3D_Hand_2

./: .clangd  .gitignore  3D_Hand_2.ioc  CMakeLists.txt  CMakePresets.json  README.md  灵巧手控制程序说明.md
Core/Inc/: gpio.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  sysmem.c
cmake/stm32cubemx/: CMakeLists.txt
